# GLAssignments

./: .gitignore
Assignment01/: CMakeLists.txt  buildTest.cpp  shader.cpp
Assignment01/shaders/: shader.frag  shader.vs
Assignment02/: Assignment1  CMakeLists.txt  buildTest.cpp  shader.hpp
Assignment02/shaders/: shader.frag  shader.vs
Assignment03/: Assigment3  CMakeLists.txt  buildTest.cpp
Assignment03/shaders/: shader.vs
Assignment04/: Assigment4  CMakeLists.txt  Camera.hpp  buildTest.cpp
Assignment04/shaders/: shader.frag
